--- a/gb/19/3/15/n11116908.md
+++ b/gb/19/3/15/n11116908.md
@@ -1,36 +1,35 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mjlii2676/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mjlii2676/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mjlii2676/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mjlii2676/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mjlii2676/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mjlii2676/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mjlii2676/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mjlii2676/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mjlii2676/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mjlii2676/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mjlii2676/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mjlii2676/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mjlii2676/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mjlii2676/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mjlii2676/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mjlii2676/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/mjlii2676/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/mjlii2676/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mjlii2676/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mjlii2676/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mjlii2676/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mjlii2676/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>孩子拉肚子何时看医生？6招应对肠胃炎</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/05/babycry_453094510-600x400.jpg" />
 <h6>孩子拉肚子的最普遍原因，就是病毒性肠胃炎，家长如何应对？(Shutterstock)
 </h6>
 <hr>
-<p>上期说到<span style="text-decoration: underline;"><span style="color: #008000; text-decoration: underline;"><a style="color: #008000; text-decoration: underline;" href="https://github.com/mjlii2676/djy/blob/master/gb/19/3/15/n11116856.md#1">如何预防孩子的便秘</a></span></span>，反之，孩子便便太多也是困扰妈妈们的课题。如果孩子便便次数很多，大便很稀，是不是<ahref="https://github.com/mjlii2676/djy/blob/master/gb/tag/%E6%8B%89%E8%82%9A%E5%AD%90.md#1">拉肚子</a>了呢？怎么知道孩子是否拉肚子呢？什么原因引起的、该怎么处理？什么情况下要去看医生？</p>
-<h2><span style="color: #008000;">如何判断孩子是否<ahref="https://github.com/mjlii2676/djy/blob/master/gb/tag/%E6%8B%89%E8%82%9A%E5%AD%90.md#1">拉肚子</a>？</span></h2>
+<p>上期说到<span style="text-decoration: underline;"><span style="color: #008000; text-decoration: underline;"><a style="color: #008000; text-decoration: underline;" href="https://github.com/ydbzqt347/djy/blob/master/gb/19/3/15/n11116856.md#1">如何预防孩子的便秘</a></span></span>，反之，孩子便便太多也是困扰妈妈们的课题。如果孩子便便次数很多，大便很稀，是不是<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%8B%89%E8%82%9A%E5%AD%90.md#1">拉肚子</a>了呢？怎么知道孩子是否拉肚子呢？什么原因引起的、该怎么处理？什么情况下要去看医生？</p>
+<h2><span style="color: #008000;">如何判断孩子是否<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%8B%89%E8%82%9A%E5%AD%90.md#1">拉肚子</a>？</span></h2>
 <p>拉肚子一般定义为一天最少3次拉稀的粪便，或比孩子平常的排便次数多出2次或以上。但也不能只看孩子大便次数，必须考虑孩子的年龄。例如刚出生的婴儿，由于肠胃还未发育成熟，便便大多数都很频密，一天6～7次都属于正常。</p>
-<p>引起孩子拉肚子的原因很多，不同年龄有不同的起因。引起孩子们拉肚子最普遍的原因，就是病毒性<ahref="https://github.com/mjlii2676/djy/blob/master/gb/tag/%E8%82%A0%E8%83%83%E7%82%8E.md#1">肠胃炎</a>，即大家常说的“吃坏肚子了”。其它比较少见的腹泻原因，有细菌或寄生虫引起的肠胃炎、乳糖不耐症、婴儿奶喝得不对或敏感等。</p>
-<p>病毒性<ahref="https://github.com/mjlii2676/djy/blob/master/gb/tag/%E8%82%A0%E8%83%83%E7%82%8E.md#1">肠胃炎</a>常年都可能感染，但以入秋及冬季比较常见。它的症状除了拉肚子，还可能有呕吐、肚子痛或发烧等症状，但不一定所有症状都会出现。它的传染途径是带有病毒的唾液或粪便，一般感染后快者在12小时会发病，慢者潜伏期可达5天。有些免疫力好的成人即便得病了，也不会有症状，但他们携带的病毒却会传染给家里免疫力低的小孩。</p>
-<h2><span style="color: #008000;">如何应对<ahref="https://github.com/mjlii2676/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92%E6%80%A7%E8%82%A0%E8%83%83%E7%82%8E.md#1">病毒性肠胃炎</a>？何时需看医生？</span></h2>
-<p><ahref="https://github.com/mjlii2676/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92%E6%80%A7%E8%82%A0%E8%83%83%E7%82%8E.md#1">病毒性肠胃炎</a>对免疫力正常的人来说是自限性疾病，即不需要任何药物也会自愈的疾病。它的恢复时间大约3～7天，越小的孩子恢复得越慢。在恢复期，家长该如何应对呢？什么情况下需要看医生？</p>
+<p>引起孩子拉肚子的原因很多，不同年龄有不同的起因。引起孩子们拉肚子最普遍的原因，就是病毒性<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%82%A0%E8%83%83%E7%82%8E.md#1">肠胃炎</a>，即大家常说的“吃坏肚子了”。其它比较少见的腹泻原因，有细菌或寄生虫引起的肠胃炎、乳糖不耐症、婴儿奶喝得不对或敏感等。</p>
+<p>病毒性<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%82%A0%E8%83%83%E7%82%8E.md#1">肠胃炎</a>常年都可能感染，但以入秋及冬季比较常见。它的症状除了拉肚子，还可能有呕吐、肚子痛或发烧等症状，但不一定所有症状都会出现。它的传染途径是带有病毒的唾液或粪便，一般感染后快者在12小时会发病，慢者潜伏期可达5天。有些免疫力好的成人即便得病了，也不会有症状，但他们携带的病毒却会传染给家里免疫力低的小孩。</p>
+<h2><span style="color: #008000;">如何应对<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92%E6%80%A7%E8%82%A0%E8%83%83%E7%82%8E.md#1">病毒性肠胃炎</a>？何时需看医生？</span></h2>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92%E6%80%A7%E8%82%A0%E8%83%83%E7%82%8E.md#1">病毒性肠胃炎</a>对免疫力正常的人来说是自限性疾病，即不需要任何药物也会自愈的疾病。它的恢复时间大约3～7天，越小的孩子恢复得越慢。在恢复期，家长该如何应对呢？什么情况下需要看医生？</p>
 <p><span style="color: #800000;"><strong>1. 确保孩子不脱水。</strong></span></p>
 <p>得肠胃炎后，孩子很想吐而不愿进食水，加之上吐下泻更容易造成孩子脱水。所以家长必须确保孩子补充足够的水分。</p>
 <p>补充水分时须“少量多次”，即每15～20分钟给孩子少量的水分，并以“透明”的水为主，例如口服补液盐水、果汁、少油的汤水等。如果不是婴儿，尽量避免喝容易肚泻的牛奶和奶制品。</p>
 <p><strong><span style="color: #800000;">2.?不强逼孩子进食。</span></strong></p>
 <p>孩子可能因肠胃炎而完全不进食，家长不必着急，只要确保孩子补充足够的水分即可，太多的食物反而会让呕吐和泻肚更严重。</p>
 <p><span style="color: #800000;"><strong>3.?观察孩子的体温。</strong></span></p>
-<p>如果孩子未满3个月，体温38℃（100.4℉）或以上必须立刻看医生，而3个月至3岁有肠胃炎症状的<ahref="https://github.com/mjlii2676/djy/blob/master/gb/tag/%E5%84%BF%E7%AB%A5.md#1">儿童</a>，如果温度在38.89℃（102℉） 度以上也应该就诊。</p>
+<p>如果孩子未满3个月，体温38℃（100.4℉）或以上必须立刻看医生，而3个月至3岁有肠胃炎症状的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%84%BF%E7%AB%A5.md#1">儿童</a>，如果温度在38.89℃（102℉） 度以上也应该就诊。</p>
 <p><span style="color: #800000;"><strong>4. 观察呕吐和排便症状。</strong></span></p>
 <p>虽说肠胃炎可能长达7天才恢复，但孩子拉肚子或呕吐的现象应逐日减少，如果过了4～5 天仍没有恢复的迹象，并且拉出来的粪便有带血或黏状分泌物，家长最好把粪便带上，带孩子去看医生。因为这有可能是较严重的细菌肠胃炎感染。另外，如果孩子的呕吐物带有血丝或吐出青色液体，或呕吐频密以至完全无法喝水，也必须就医。</p>
 <p><span style="color: #800000;"><strong>5. 观察孩子的精神状态。</strong></span></p>
 <p>如果孩子在没有发烧的情况下依然昏昏沉沉，加上小便减少，便有脱水危险，应该看医生。</p>
 <p><span style="color: #800000;"><strong>6. 观察肚子痛的症状及频率。</strong></span></p>
 <p>肠胃炎偶尔会有肚子阵痛，但不应该是剧烈疼痛。如果肚子疼痛频密而剧烈，便应该就医检查是否为肠道阻塞。如果是轻微疼痛，可以热敷肚子或给退烧止痛药缓解。◇</p>
-<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/mjlii2676/djy/blob/master/gb/18/4/17/n10311825.md#1" target="_blank" rel="noopener noreferrer">宝宝哭不停是肠绞痛？医师3招判断+6招缓解</a></span></h3>
-<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/mjlii2676/djy/blob/master/gb/19/3/15/n11116856.md#1" target="_blank" rel="noopener noreferrer">孩子便秘怎么办？防便秘除了喂水 爸妈还要这样做</a></span></h3>
-<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/mjlii2676/djy/blob/master/gb/18/11/26/n10875656.md#1" target="_blank" rel="noopener noreferrer">手足口病真的很可怕？医生教4招防病毒传染</a> </span></h3>
+<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/18/4/17/n10311825.md#1" target="_blank" rel="noopener noreferrer">宝宝哭不停是肠绞痛？医师3招判断+6招缓解</a></span></h3>
+<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/19/3/15/n11116856.md#1" target="_blank" rel="noopener noreferrer">孩子便秘怎么办？防便秘除了喂水 爸妈还要这样做</a></span></h3>
+<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/18/11/26/n10875656.md#1" target="_blank" rel="noopener noreferrer">手足口病真的很可怕？医生教4招防病毒传染</a> </span></h3>
 <h3><strong>专栏医师：黄彦鈜儿科医学博士</strong></h3>
-<p><ahref="https://i.epochtimes.com/assets/uploads/2019/03/6d9f7a3b6786ac4bb3b2311d492347cd.jpg"><img class="wp-image-11116895 alignright" src="https://i.epochtimes.com/assets/uploads/2019/03/6d9f7a3b6786ac4bb3b2311d492347cd-600x900.jpg" alt="黄彦鈜儿科博士。（黄彦鈜提供）" width="100" b="150" /></a></p>
 <p>黄彦鈜（Grace Yen Hoong Ooi, MD），医学博士，康奈尔下城医院及纽约大学信义会医院临床教授、儿科主治医师，纽约幸福儿科诊所院长。毕业于哈佛大学医学院、加拿大麦吉尔大学，曾任爱因斯坦医学院儿科住院医师。</p>
 <p>电话：917-338- 6688<br />
 幸福儿科诊所：762 59st, 7楼，（7 夹8大道）Brooklyn， NY 11220</p>
@@ -40,42 +39,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/19/4/25/n11212576.md#1">杭州二胎妈妈吃冰箱剩菜染细菌 险胎儿不保</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/19/4/11/n11179022.md#1">都是大人“随便洗手”惹祸？?3岁娃狂拉肚子脱水</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/18/10/15/n10784470.md#1">天变凉 婴幼儿小心轮状病毒 防急性肠胃炎</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/16/12/27/n8636485.md#1">日本肠胃炎单周病例破6万 旅日少吃生鱼片</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/12/1/4/n3476349.md#1">急性肠胃炎发威 少吃勤洗手</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/9/8/20/n2630574.md#1">传染病介绍 : 病毒性肠胃炎</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/8/20/n2630574.md#1">传染病介绍 : 病毒性肠胃炎</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/1/4/n3476349.md#1">急性肠胃炎发威 少吃勤洗手</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/12/27/n8636485.md#1">日本肠胃炎单周病例破6万 旅日少吃生鱼片</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/15/n10784470.md#1">天变凉 婴幼儿小心轮状病毒 防急性肠胃炎</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/4/11/n11179022.md#1">都是大人“随便洗手”惹祸？?3岁娃狂拉肚子脱水</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/4/25/n11212576.md#1">杭州二胎妈妈吃冰箱剩菜染细菌 险胎儿不保</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/26/n13673591.md#1">研究发现特定基因控制着孩子生长速度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/18/n13586954.md#1">喝牛奶易得一型糖尿病？专家：有办法能预防</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/13/n13573413.md#1">专家：两岁以下幼儿不要食用添加糖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/10/n13567962.md#1">终结孩子哭闹 善用一个心法、三个策略</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/2/17/n11874910.md#1">视频：未戴口罩 遇警暴力执法 文革再现</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/12/n10846318.md#1" target="_blank">共产暴政录：疯狂恐怖的“红八月”</a></li><li><a href="https://github.com/mjlii2676/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/3/n11232059.md#1" target="_blank">大陆移民旧金山推崇法轮功：真善忍好</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/12/n9951023.md#1" target="_blank">林辉：周恩来如此对待两位救命恩人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/20/n8510885.md#1" target="_blank">哈尔滨一位大学教师17年的坚持</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/17/n11947713.md#1">【热点互动】海外华人回国“避疫”引热议</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/17/n11947234.md#1">【直播回放】3.17新肺炎追踪：中美外交战</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/mjlii2676/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mjlii2676/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mjlii2676/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/15/n11116908.htm">孩子拉肚子何时看医生？6招应对肠胃炎</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/15/n11116908.htm">孩子拉肚子何时看医生？6招应对肠胃炎</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mjlii2676/djy/blob/master/gb/19/3/15/n11116908.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mjlii2676/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mjlii2676/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mjlii2676/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mjlii2676/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjlii2676/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/3/15/n11116908.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
